Fix h1 size on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -142,7 +142,7 @@ table, th, td {
          "footer";
    }
    p { font-size: 1em; }
-   h1 { font-size: 1.0em; }
+   h1 { font-size: 1.25em; }
    h2 { font-size: 1em; }
    h3 { font-size: 0.9em; }
    .navbar a { font-size: 0.9em; }
